[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
itertools = "0.12.0"
pathfinding = "4.6.0"
petgraph = "0.6.4"
petgraph-evcxr = "0.2.0"
regex = "1.10.2"
z3 = "0.12.1"
